--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "postinstall": "[ -d './node_modules/.bin' ] && prisma generate || echo 'Skipping postinstall'",
+    "postinstall": "echo 'Skipping postinstall'",
     "vercel-build": "next build"
   },
   "dependencies": {
@@ -67,6 +67,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
