--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "test:run": "vitest run",
     "postinstall": "echo 'Skipping postinstall'",
-    "vercel-build": "next build"
+    "vercel-build": "next build",
+    "generate-icons": "node scripts/generate-pwa-icons.js"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
@@ -89,6 +90,7 @@
     "eslint-plugin-react-hooks": "^4.0.0",
     "jsdom": "^22.1.0",
     "postcss": "^8",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "vitest": "^3.2.4"
