--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "generate-icons": "node scripts/generate-pwa-icons.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.47.4",
-    "@auth/mongodb-adapter": "^3.7.4",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -45,10 +43,11 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.47.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -57,9 +56,7 @@
     "framer-motion": "^12.23.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "mongodb": "^6.12.0",
     "next": "^14.2.23",
-    "next-auth": "^4.24.7",
     "next-themes": "latest",
     "react": "^18",
     "react-day-picker": "8.10.1",
@@ -78,7 +75,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -91,6 +87,7 @@
     "eslint-config-next": "^14.2.23",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "jest-axe": "^10.0.0",
     "jsdom": "^22.1.0",
     "postcss": "^8",
     "sharp": "^0.34.3",
